--- a/README.Rmd
+++ b/README.Rmd
@@ -19,17 +19,15 @@ knitr::opts_chunk$set(
 
 `hayeslib` is a personal package inspired by Hilary Parker's [Writing an R package from scratch](https://hilaryparker.com/2014/04/29/writing-an-r-package-from-scratch/) post.
 
-`hayeslib` is a repository of code snippets that I find myself using frequently for common tasks (i.e. I want to use a function I wrote in more than one research report or problem set so I quickly through it in here).
-
 # Dear potential employers
 
 This is not what I think a R package should look like. At some point this I will turn the code here into well documented and tested functions. It's probably gonna be a while.
 
-See the Issues tab to see what I think this package should look like.
+See the `Issues` tab to see what I think this package should look like.
 
 ## Installation
 
-You can install hayeslib from github with:
+You can install `hayeslib` from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
