tweaks for R CMD check

--- a/vignettes/mcmc_funcs.Rmd
+++ b/vignettes/mcmc_funcs.Rmd
@@ -15,13 +15,11 @@ Suppose you generate some MCMC samples of params
 
 ```{r}
 library(hayeslib)
-library(tidyverse)  # hack for now
-library(coda)
 
-num_samples <- 10^2
+num_samples <- 50
 
-postr <- tibble(alpha = rnorm(num_samples),
-                beta = rnorm(num_samples))
+postr <- data.frame(alpha = rnorm(num_samples),
+                    beta = rnorm(num_samples))
 
 postr %>% 
   mcmc_trace()
